Salesforce Chatter/src/objects/Customer__c.object
<CustomObject>
    <description>List of users</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fine__c</fullName>
        <description>Total amount due</description>
        <label>Fine due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked only if customer is the employee</inlineHelpText>
        <label>IsEmployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Issued__c</fullName>
        <label>Media Issued</label>
        <summaryForeignKey>Customer_Media__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Customer name</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Customer Add</description>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_media_allowed__c</fullName>
        <inlineHelpText>Max number media that can be issued to this customer</inlineHelpText>
        <label>Total media allowed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_media_issued__c</fullName>
        <label>Total media issued</label>
        <summaryForeignKey>Customer_Media__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Customer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Limit_the_Media_issue_to_customer</fullName>
        <active>true</active>
        <errorConditionFormula>Total_media_allowed__c  &lt;  Total_media_issued__c</errorConditionFormula>
        <errorMessage>Customer already full with limit. Please ask customer to return the old items</errorMessage>
    </validationRules>
</CustomObject>